# ElaboratoJin

./: Acticity.cpp  Acticity.h  Activity.cpp  Activity.h  CMakeLists.txt  ToDoInterface.cpp  ToDoInterface.h  Todolist.cpp  Todolist.h  main.cpp
test/: CMakeLists.txt  runAllTest.cpp  test_activity.cpp  test_todoInterface.cpp  test_todolist.cpp
test/lib/googletest/: CHANGES  README.md
test/lib/googletest/docs/: AdvancedGuide.md  FAQ.md  XcodeGuide.md
test/lib/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-internal.h  gtest-port.h
test/lib/googletest/src/: gtest-death-test.cc  gtest-port.cc
